--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+Version 1.05
+- Durability can now restore back to max after a certain time passed
+
 Version 1.04
 - Durability now saves when the server reloads/restarts
 
