--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+Version 2.14.2
++ Implemented bypass of explosion protections for fluids
++ Ability to protect "TNT Cannons" from the bypass
+
 Version 2.14.1
 + Experimental Timer Thread limiter
 + Corrected issue with config file not updating
