--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+Version 4.1.2
++ Added configurable damage for explosion event types to each material
+
 Version 4.1.1
 + Corrected custom metric
 + Added mossycobblestone and sandstone to default materials
