--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+Version 4.2
++ Correct Cannons Implementation
++ Improve explosion event handling
++ Fixes for interactions with other plugins
+
 Version 4.1.3
 + Add null checks for better things.
 
