--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+Version 4.2.2
++ Implement Features with Factions
+
 Version 4.2
 + Correct Cannons Implementation
 + Improve explosion event handling
